# hub-token-program

./: .env.docker  .gitignore  Anchor.toml  README.md  docker-compose.yml  package-lock.json  package.json  prompt.md  rust-toolchain.toml  test-claim-revenue.ts
app/: .env  index.html  package-lock.json  package.json  tailwind.config.js
app/src/: vite-env.d.ts
docs/: API_DOCUMENTATION.md
hub_token_program/: Anchor.toml  DOC.md  Makefile  package-lock.json
hub_token_program/app/: .env.example  vite.config.ts
hub_token_program/docs/: PROJECT_STATUS.md
hub_token_program/programs/hub_token_program/: Cargo.toml
hub_token_program/programs/hub_token_program/src/: constants.rs  error.rs  events.rs  lib.rs
hub_token_program/programs/hub_token_program/src/instructions/: burn_property_tokens.rs  initialize_property.rs  mint_property_tokens.rs  mod.rs  transfer_hook.rs
hub_token_program/programs/hub_token_program/src/state/: mod.rs
hub_token_program/programs/hub_token_program/src/utils/: hub_credential_verification.rs  mod.rs  sas_verification.rs
hub_token_program/scripts/: add-discriminators.js  generate-idl.js  test-with-mainnet-fork.sh  validate-idl.ts
hub_token_program/tests/: hub_token_program.ts
scripts/: validate-idl.js
services/api/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tsconfig.json
services/indexer/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  STATUS.md  SUCCESS.md  go.mod  go.sum
tests/: hub_token_program.ts  test-with-real-data.ts
(+122 files in other folders)
